# ui_demo_lvgl

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  mouse_cursor_icon.c  platform.c  platform.h
